# CMakeCxx

./: CMakeLists.txt
src/: Component.cpp  Component.h  Component.idl  pch.h
